--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@coinbase/onchainkit": "latest",
+    "@farcaster/frame-sdk": "^0.0.26",
     "@privy-io/react-auth": "^2.0.3",
     "@privy-io/wagmi": "^1.0.2",
     "@tanstack/react-query": "^5",
